# feenox

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.md  INSTALL  Makefile-base.am  Makefile-doc.am  Makefile.am  Makefile.base  NEWS  README  README-academics.md  README-engineers.md  README-hackers.md  README.m4  README.markdown  README.md  README.pd  README4academics  README4academics.markdown  README4academics.md  README4engineers  README4engineers.markdown  README4engineers.md  README4hackers  README4hackers.markdown  README4hackers.md  TODO  TODO.md  algebraic_expr.last  autoclean.sh  autogen.sh  config.h.ac  configure.ac  download.md  syntax-feenox.tex  syntax.tex  thermal-slab-uniform-source-octave.last
doc/: .bg  .gitignore  100-introduction.md  110-objective.md  120-scope.md  200-architecture.md  200-architecutre.md  210-deployment.md  220-execution.md  230-efficiency.md  240-scalability.md  250-flexibility.md  260-extensibility.md  270-interoperatibility.md  300-interfaces.md  310-input.md  320-output.md  400-qa.md  410-reproducibility.md  420-testing.md  430-bugs.md  440-verification.md  450-validation.md  460-documentation.md  CODE_OF_CONDUCT.markdown  CODE_OF_CONDUCT.md  FAQ.markdown  FAQ.md  Makefile.am  README.markdown  README.md  TODO  TODO.md  binary.md  cantilever.fee  cantilever.sh  cloud-first.md  code-style.lua  compilation.markdown  compilation.md  (+189 more)
dockerfiles/: README.md
examples/: .gitignore  .md  2025.fee  README.markdown  README.md  TODO  TODO.md  airfoil.fee  airfoil.py  allprimes.fee  asme-expansion.fee  asme-expansion.ppl  axis-angle-from-vectors.fee  azmy-clean.sh  azmy-full.fee  azmy-full.geo  azmy-full.ppl  azmy-full.sh  azmy-s4.geo  azmy-s6.geo  azmy-s8.geo  azmy-structured-fig.geo  azmy-structured.fee  azmy-structured.geo  azmy-structured.yaml  azmy-unstructured-fig.geo  azmy.fee  azmy.geo  azmy.yaml  barra3d.fee  barra3d.geo  barra3d.ppl  basic.markdown  basic.md  basic.yaml  beam-cantilever-hex20.geo  beam-cantilever-hex27.geo  beam-cantilever-hex8.geo  beam-cantilever-tet10.geo  beam-cantilever-tet4.geo  (+234 more)
src/: .gitignore  Makefile-base.am  Makefile.am  feenox.c  feenox.h  version.c
src/benchmark/: .gitignore  Makefile.am  principal_stress.cpp
src/contrib/: kdtree.h
src/flow/: abort.c  call.c  cleanup.c  conditional.c  debug.c  define.c  error.c  getptr.c  init.c  instruction.c  mpi_init.c  parametric.c  realtime.c  run.c  run_standard.c  step.c
src/io/: file.c  io.c  m4.c  print.c  printf.c  read.c  shell.c  shmem.c
src/math/: algebra.c  alias.c  assignment.c  builtin.h  builtin_decl.h  builtin_functionals.c  builtin_functions.c  builtin_vectorfunctions.c  builtindecl.h  builtinfunctionals.c  builtinfunctions.c  builtinvectorfunctions.c  dae.c  expressions.c  fit.c  function.c  history.c  linalg.h  matrix.c  minimize.c  multiminf.c  multiminfdf.c  multiroot.c  solve.c  vector.c
src/mesh/: boundary_condition.c  calculix.c  cell.c  element.c  element.h  extrema.c  fem.c  geometry.c  gmsh.c  hexa20.c  hexa27.c  hexa8.c  init.c  integrate.c  interpolate.c  line2.c  line3.c  material.c  mesh.c  neighbors.c  physical_group.c  point.c  prism15.c  prism6.c  quad4.c  quad8.c  quad9.c  tag_index_map.c  tet10.c  tet4.c  triang3.c  triang6.c  vtk.c  vtu.c  write.c
src/mesh/elements/: hexa20.c  hexa27.c  hexa8.c  line2.c  line3.c  point.c  prism15.c  prism6.c  quad4.c  quad8.c  quad9.c  tet10.c  tet4.c  triang3.c  triang6.c
src/parser/: auxiliary.c  parser.c  parser.h
src/pdes/: .gitignore  blas.c  build.c  dirichlet.c  distribution.c  dump.c  fem.c  gradient.c  init.c  neumann.c  parse.c  petsc_ksp.c  petsc_snes.c  petsc_ts.c  reaction.c  slepc_eps.c  solve.c
src/pdes/laplace/: bc.c  bulk.c  init.c  laplace.h  methods.h  parser.c
src/pdes/mechanical/: bc.c  bulk.c  elastic-isotropic.c  elastic-orthotropic.c  elastic-plane-strain.c  elastic-plane-stress.c  expansion-isotropic.c  expansion-orthotropic.c  gradient.c  hyperelastic-neohookean.c  hyperelastic_neohookean.c  init.c  linearize.c  mechanical.h  methods.h  neohookean.c  parser.c  post.c  strain.c  stress.c
src/pdes/mechanical/materials/: elastic-plane-strain.c  elastic-plane-stress.c  expansion-isotropic.c  expansion-orthotropic.c  linear-isotropic.c  linear-orthotropic.c  neohookean.c  saint_venant-kirchoff.c
src/pdes/modal/: bc.c  bulk.c  elastic-isotropic.c  elastic-orthotropic.c  elastic-plane-strain.c  elastic-plane-stress.c  init.c  methods.h  modal.h  parser.c  post.c
src/pdes/neutron_diffusion/: bc.c  bulk.c  currents.c  init.c  methods.h  neutron_diffusion.h  parser.c  post.c
src/pdes/neutron_diffusion_fem/: bc.c  bulk.c  init.c  methods.h  neutron_diffusion_fem.h  parser.c  post.c
src/pdes/neutron_sn/: bc.c  bulk.c  init.c  methods.h  neutron_sn.h  parser.c  post.c
src/pdes/neutron_transport/: bc.c  bulk.c  init.c  methods.h  neutron_transport.h  parser.c  post.c
src/pdes/thermal/: bc.c  bulk-jac.c  bulk.c  heatflux.c  init.c  methods.h  parser.c  post.c  thermal.h
src/problems/: build.c  dirichlet.c  distribution.c  dump.c  gradient.c  init.c  neumann.c  petsc_ksp.c  petsc_snes.c  petsc_ts.c  slepc_eps.c  solve.c
src/problems/laplace/: bc.c  bulk.c  init.c
src/problems/mechanical/: bc.c  bulk.c  init.c  mechanical.h  methods.h  post.c  stress.c
src/problems/modal/: bc.c  bulk.c  init.c  methods.h  modal.h  post.c
src/problems/thermal/: bc.c  bulk.c  heatflux.c  init.c  methods.h  post.c  thermal.h
tests/: .gitignore  2dpwr-eighth.geo  2dpwr-quarter.geo  2dpwr.fee  Barra1D.geo  Barra1D.msh  Barra1D_a_Estac.fee  Barra1D_b_Trans.fee  H2O.fee  PF.geo  Pu-239a.fee  Pu-239b.fee  README.md  U-235.fee  U-Al.fee  URRa.fee  abort.fee  abort.sh  abs.fee  airfoil.fee  airfoil.msh  airfoil.py  alias.fee  (+566 more)
utils/fee2ccx/: .gitignore  Makefile.am  README.md  configure.ac  fee2ccx.c  frd2vtk.fee  frd2vtk.py  parsepde.c
utils/fee2ccx/examples/nafems-le10/: .gitignore  diff.fee  nafems-le10.fee  nafems-le10.geo  nafems-le10.step
utils/fee2ccx/examples/tensile-test/: README.md  diff.fee  frd2vtk.fee  tensile-test-specimen.step  tensile-test.fee  tensile-test.geo
(+381 files in other folders)
